// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListComponent should create empty 1`] = `
<rc-list
  role="list"
>
  <span
    class="rc-list-items-wrapper"
  >

  </span>
</rc-list>
`;

exports[`ListComponent should create horizontal 1`] = `
<rc-list
  class="rc-horizontal"
  role="list"
>
  <span
    class="rc-list-items-wrapper"
  >

  </span>
</rc-list>
`;

exports[`ListComponent should create with items 1`] = `
<rc-list
  role="list"
>
  <span
    class="rc-list-items-wrapper"
  >
    <rc-list-item
      class="rc-list-item"
      role="list-item"
    >
      Item 1
    </rc-list-item>
    <rc-list-item
      class="rc-list-item"
      role="list-item"
    >
      Item 2
    </rc-list-item>

  </span>
</rc-list>
`;

exports[`ListComponent should create with line 1`] = `
<rc-list
  role="list"
>
  <rc-list-title
    class="rc-list-title"
  >
    Title
  </rc-list-title>
  <span
    class="rc-list-items-wrapper"
  >
    <rc-list-item
      class="rc-list-item"
      role="list-item"
    >
      <rc-line
        class="rc-line"
      >
        Item
      </rc-line>
    </rc-list-item>

  </span>
</rc-list>
`;

exports[`ListComponent should create with title 1`] = `
<rc-list
  role="list"
>
  <rc-list-title
    class="rc-list-title"
  >
    Title
  </rc-list-title>
  <span
    class="rc-list-items-wrapper"
  >
    <rc-list-item
      class="rc-list-item"
      role="list-item"
    >
      Item
    </rc-list-item>

  </span>
</rc-list>
`;

exports[`ListComponent should create with title 1`] = `
<rc-list
  role="list"
>
  <rc-list-title
    class="rc-list-title"
  >
    Title
  </rc-list-title>
  <rc-list-item
    class="rc-list-item"
    role="list-item"
  >
    Item
  </rc-list-item>

</rc-list>
`;
